--- a/anime-detail.html
+++ b/anime-detail.html
@@ -229,6 +229,9 @@
   <audio id="blackcover-ost" loop><source src="https://www.dropbox.com/scl/fi/6ms1xqryt0pscbkcwj14v/Black-Clover-OP-10-Full-Vickeblanka-Black-Catcher-Sub-Espa-ol-HD.mp3?rlkey=l04rc2y2jr64fdy1p6oyw8dn1&st=4k97mqqr&raw=1" type="audio/mpeg"></audio>
   <audio id="myhero-ost" loop><source src="https://www.dropbox.com/scl/fi/vrw6vkic5x9tuyt1mn5ij/Boku-no-Hero-Academia-Season-1-Ending-1-full-Brian-the-Sun-Heroes-Sub-Espa-olJapon-s-AMV.mp3?rlkey=51q6lbh9hdxuni9tnyui0qkml&st=b4ayqrnh&raw=1" type="audio/mpeg"></audio>
   <audio id="kakkou-ost" loop><source src="https://www.dropbox.com/scl/fi/znlethjlxoojg42ztq9n4/Kakou-no-iinazuke-OP-FULL-Kiyoe-Yoshioka-Dekoboko-Sub-Espa-ol-Romaji-English-AMV.mp3?rlkey=t3he35wwxyanqm1uddod743a9&st=595b7kzz&raw=1" type="audio/mpeg"></audio>
+  <audio id="futarisolocamp-ost" loop><source src="https://www.dropbox.com/scl/fi/r78qemts4onvpu35xentb/Official-Audio.mp3?rlkey=jdhdtna1cizhvwlqur9jk60iu&st=wh2o8bpm&raw=1" type="audio/mpeg"></audio>
+  <audio id="tojima-ost" loop><source src="https://www.dropbox.com/scl/fi/t3chgli1kyjvp2bonmei2/Tojima-Tanzaburo-Wants-To-Be-A-Kamen-Rider-OP-FULL-Wanna-Be-by-TeddyLoid-feat.-Shigeru-Matsuzaki.mp3?rlkey=pharcldwlirapw2f25jgijhof&st=qs93guvw&raw=1" type="audio/mpeg"></audio>
+  <audio id="almachan-ost" loop><source src="https://www.dropbox.com/scl/fi/58yc7nfovronyfcigs5k8/Alma-chan-wa-Kazoku-ni-Naritai-Ending-Full-Arifuretetai-by-KAF.mp3?rlkey=6gl9bayyvblte648fswou8zyj&st=1p1m5x51&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -2678,7 +2681,7 @@
         seasons: [
           {
             num: 1,
-            cover: "https://www.dropbox.com/scl/fi/8tzzytd8205p4mk00osmq/Airbrush-Image-Enhancer-1761696979492.jpg?rlkey=59ik39rxc8px9zpake98m5eah&st=5tjrba95&raw=1",
+            cover: "https://www.dropbox.com/scl/fi/vakrqxl5ey2qk0qdq5q86/Airbrush-Image-Enhancer-1761696979492.jpg?rlkey=vj8z9u813mhcpdanjqgbimqy3&st=a98lyc2h&raw=1",
             eps: [
               { title: "Hazbin Hotel T1 Cap 1"},
               { title: "Hazbin Hotel T1 Cap 2"},
@@ -2692,7 +2695,7 @@
           },
           {
             num: 2,
-            cover: "https://www.dropbox.com/scl/fi/nhh8b8z72djkh9386memp/Airbrush-Image-Enhancer-1761697102126.jpg?rlkey=wsn7ykzhgdnew145ws7ljxx08&st=ibo38l4p&raw=1",
+            cover: "https://www.dropbox.com/scl/fi/iz2jt0avm2d625tjb8trq/Airbrush-Image-Enhancer-1761697102126.jpg?rlkey=isj2usvel3oh22io1o620lfoi&st=8laf3wdv&raw=1",
             eps: [
               { title: "Hazbin Hotel T2 Cap 1"},
               { title: "Hazbin Hotel T2 Cap 2"},
@@ -3159,8 +3162,50 @@
           }
         ]
       },
-
-
+      54: {
+        title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai",
+        desc: "Tanzaburo Tojima ha soñado con ser un Kamen Rider toda su vida. Pero ahora que tiene 40 años, empieza a pensar que su sueño quizá nunca se haga realidad… ¡hasta que se ve envuelto en una serie de crímenes inspirados en el infame “Shocker”! De Shibata Yokusaru, creador de Air Master y 81 Diver, llega una historia alocada y conmovedora sobre adultos que adoran a Kamen Rider demasiado y empiezan a jugar a serlo… ¡de verdad!",
+        cover: "tojima1.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/1acwpuwtsx2f20urv44eo/Airbrush-IMAGE-ENHANCER-1763730194883-1763730194884.jpg?rlkey=ornue772yaoazcagrsinqj1fc&st=nlz517kl&raw=1",
+            eps: [
+              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 1"},
+              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 2"},
+              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 3"},
+              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 4"},
+              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 5"},
+              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 6"},
+              { title: "Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 7"},
+            ]
+          }
+        ]
+      },
+      55: {
+        title: "Alma-chan wa Kazoku ni Naritai",
+        desc: "Creada por los científicos Enji y Suzume, Alma es una inteligencia artificial capaz de aprender por sí misma… y de destrozar un tanque en segundos. Sin embargo, cree que ellos son su padre y su padre. Ahora, la pareja deberá ocultar sus sentimientos románticos mientras enfrenta su experimento más caótico: la vida en familia.",
+        cover: "almachan.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/en905hoqulm0ih9epmjcf/almachan1.jpg?rlkey=dm7s8l0lhplo8eshfsgj7fdyk&st=ji8mmsmi&raw=1",
+            eps: [
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 1"},
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 2"},
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 3"},
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 4"},
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 5"},
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 6"},
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 7"},
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 8"},
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 9"},
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 10"},
+              { title: "Alma-chan wa Kazoku ni Naritai T1 Cap 11"},
+            ]
+          }
+        ]
+      },
 
 
 
@@ -3367,6 +3412,9 @@
         50: ['blackcover-ost'],
         51: ['myhero-ost'],
         52: ['kakkou-ost'],
+        53: ['futarisolocamp-ost'],
+        54: ['tojima-ost'],
+        55: ['almachan-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
