--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
         <option>Terror psicológico</option>
         <option>Thriller</option>
         <option>Thriller psicológico</option>
+        <option>Tokusatsu</option>
         <option>Tragedia</option>
         <option>Yaoi</option>
         <option>Yuri</option>
@@ -312,6 +313,8 @@
       {id:51, title:"My Hero Academia", aliases: ["Boku no Hero"], img:"sgsgsdseg.jpg", rating:4.7, genres:["Superhéroes","Ciencia ficción","Comedia","Drama","Acción","Fantasía","Escolar","Aventura","Shōnen"]},
       {id:52, title:"Kakkou no Linazuke", aliases: ["A Couple of Cuckoos"], img:"pordf.jpg", rating:4.5, genres:["Romance","Comedia","Escolar","Harem","Shōnen"]},
       {id:53, title:"Futari Solo Camp", aliases: ["Solo Camping for Two"], img:"futaripor.jpg", rating:4.5, genres:["Romance","Comedia","Slice of Life","Seinen"]},
+      {id:54, title:"Tōjima Tanzaburō wa Kamen Rider ni Naritai", aliases: ["Tojima Wants to Be a Kamen Rider"], img:"tojima1.jpg", rating:4.8, genres:["Comedia","Acción","Tokusatsu","Seinen"]},
+      {id:55, title:"Alma-chan wa Kazoku ni Naritai", aliases: ["Alma-chan Wants to Be a Family!"], img:"almachan.jpg", rating:4.6, genres:["Comedia","Romance","Ciencia ficción","Seinen"]},
     ];
 
     /* ----------------------------
