--- a/video-player.html
+++ b/video-player.html
@@ -1505,6 +1505,7 @@
           "5": { link:'https://www.dropbox.com/scl/fi/x6blta7o6lltqn0b5l089/To-Your-Eternity-T3-Cap-5.mp4?rlkey=61eeem47ca0dj03kmoo99hn08&st=ml9ukq6z&raw=1', link2: 'https://drive.google.com/file/d/1n8Ux4bsr2U7J16p_jPM15s92GC-bkNMp/preview', title:'To Your Eternity T3 Cap 5' },
           "6": { link:'https://www.dropbox.com/scl/fi/mvvtwr07x3v320l9liokf/To-Your-Eternity-T3-Cap-6.mp4?rlkey=8j70j9zkr6y17fo8np4zo7uq9&st=4svr8f7q&raw=1', link2: 'https://drive.google.com/file/d/1yjdoLXayA4_QaiTSk9QLi3XqjuGvmlyJ/preview', title:'To Your Eternity T3 Cap 6' },
           "7": { link:'https://www.dropbox.com/scl/fi/2it4ewslghx8vtsts6upa/To-Your-Eternity-T3-Cap-7.mp4?rlkey=h1l18k0blnvt6xexl0wgnbb7m&st=6u23g1rp&raw=1', link2: 'https://drive.google.com/file/d/1nkr_iF1tfOzOeT240jGZuC6k47UuhRkB/preview', title:'To Your Eternity T3 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1_NhHoLfqhkantkwtzn3ekJTxAPo3sqUo/preview', title:'To Your Eternity T3 Cap 8' },
         }
       },
       "32": {
@@ -2032,6 +2033,7 @@
           "2": { link:'https://www.dropbox.com/scl/fi/5i7p21ni7u1b0ci58lknt/Spy-Family-T3-Cap-2.mp4?rlkey=rmp72zlu9gjgygtrqcazmtvii&st=8zs1qtyj&raw=1', link2: 'https://drive.google.com/file/d/1nMBZYAKch3txGYa7ZR-E9PXH3HJGV7Qe/preview', title:'Spy × Family T3 Cap 2' },
           "3": { link:'https://www.dropbox.com/scl/fi/tsjz7bz2jqyqtqm3o88dc/Spy-Family-T3-Cap-3.mp4?rlkey=fy225l9ubtcex5bhfi8gat0qk&st=43tua16k&raw=1', link2: 'https://drive.google.com/file/d/1pItUIDJOzv-2gn7pElJqqVAIHcHD6ECS/preview', title:'Spy × Family T3 Cap 3' },
           "4": { link:'https://www.dropbox.com/scl/fi/ssy2qf91agoemqiapwyhx/Spy-Family-T3-Cap-4.mp4?rlkey=mu0e8hzalf9k8cmdmuel3v2tw&st=8n1dtbv4&raw=1', link2: 'https://drive.google.com/file/d/1mfKA7Y-Hw8LB_u0LM6Vaaw04WUTsLzsJ/preview', title:'Spy × Family T3 Cap 4' },
+          "5": { link: 'https://drive.google.com/file/d/1n_aDJZIlhwYUf2-DxXKSqJ3wSfalI7Wv/preview', title:'Spy × Family T3 Cap 5' },
         }
       },
       "50": {
@@ -2221,6 +2223,7 @@
         "1": {
           "1": { link:'https://www.dropbox.com/scl/fi/sr54vz6tfaj7oqum850da/My-Hero-Academia-T8-Cap-1.mp4?rlkey=pzm4ztsdrcsj8kesrox9zlugi&st=oq2p9m3y&raw=1', link2: 'https://drive.google.com/file/d/1C16zoogP1JPPZANScxJP0z67WTxZYgIq/preview', title:'My Hero Academia T8 Cap 1' },
           "2": { link:'https://www.dropbox.com/scl/fi/bnebnja6hlins0uim6eqx/My-Hero-Academia-T8-Cap-2.mp4?rlkey=n092mfb3wrjrm6w4h6p111ty2&st=xfbcbml9&raw=1', link2: 'https://drive.google.com/file/d/15EYYksOimq9RBKI89LCdtqZ-CXWEFv3l/preview', title:'My Hero Academia T8 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1qT5zJg0WrrWvazqmC8eByOgJWl2hCcoJ/preview', title:'My Hero Academia T8 Cap 3' },
         }
       },
       "52": {
@@ -2291,6 +2294,7 @@
           "2": { link:'https://www.dropbox.com/scl/fi/zfv6optbgdlhk9yrbyimb/T-jima-Tanzabur-wa-Kamen-Rider-ni-Naritai-T1-Cap-2.mp4?rlkey=k2n3ma25tmhkptlorprj234fi&st=jtf97b5e&raw=1', link2: 'https://drive.google.com/file/d/1-TAltIstu2c6oReESC1WZDGstP6RoLgW/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 2' },
           "3": { link:'https://www.dropbox.com/scl/fi/9i7ycmk5wwxa0ja0uhpgk/T-jima-Tanzabur-wa-Kamen-Rider-ni-Naritai-T1-Cap-3.mp4?rlkey=yt8tg9r5tfoq31x02qst6zc9y&st=egtk9xj7&raw=1', link2: 'https://drive.google.com/file/d/1ZYTNt-vrHLTFEvDuscNs-3JC5fLZC4f2/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 3' },
           "4": { link:'https://www.dropbox.com/scl/fi/6u0gyjxomjfvh2nm40l0w/T-jima-Tanzabur-wa-Kamen-Rider-ni-Naritai-T1-Cap-4.mp4?rlkey=7ul5jfhj5h4rkttdj5vwfrne3&st=6eu62t5d&raw=1', link2: 'https://drive.google.com/file/d/1FY_jZ61wRtSTS6akzxOvYvBvqTBXGcV8/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1LGTe12Pezs-4VVuV4Zkz4XRTeXszP6vv/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 5' },
         }
       },
       "55": {
