--- a/video-player.html
+++ b/video-player.html
@@ -1109,7 +1109,7 @@
           "12": { link:'https://www.dropbox.com/scl/fi/ccez45htv7zwxcsrbi4k1/Chainsaw-Man-T1-Cap-12.mp4?rlkey=ok47yk3smkdh2vcc3le118cyh&st=1m3leanw&raw=1', title:'Chainsaw Man T1 Cap 12' },
         },
         "2": {
-          "1": { link:'https://www.dropbox.com/scl/fi/sqdva7dcm1evvkoh64ehy/Chainsaw-Man-La-Pelicula_-Arco-de-Reze.mp4?rlkey=6glp1h7uvawzvxhhx2tzamrf7&st=io8apbuq&raw=1', link2: 'https://drive.google.com/file/d/1fF1gFhuDugqSttOTYp1E1JNYST8poe2M/preview', title:'Chainsaw Man Movie: Reze-hen 【SUB ESPAÑOL】【HD】' },
+          "1": { link:'https://drive.google.com/file/d/1kjd89mPW3dTRunDtaiACLPkMDg5PABYB/preview', title:'Chainsaw Man Movie: Reze-hen 【HD】' },
 
         }
       },
