--- a/index.html
+++ b/index.html
@@ -209,6 +209,12 @@
         <button id="tiktok-btn" type="button" aria-label="Abrir TikTok en nueva pestaña" onclick="(function(e){ e.stopPropagation(); openInNewTab('https://www.tiktok.com/@archinime?_t=ZS-8zGoKE4IqLw&_r=1'); })(event)">
           <img src="tiktok.jpg" alt="TikTok" loading="lazy" decoding="async">
         </button>
+        <button id="facebook-btn" type="button" aria-label="Abrir YouTube en nueva pestaña" onclick="(function(e){ e.stopPropagation(); openInNewTab('https://www.facebook.com/share/16sn9Hw5Yd/'); })(event)">
+          <img src="face1.jpg" alt="Facebook" loading="lazy" decoding="async">
+        </button>
+        <button id="telegram-btn" type="button" aria-label="Abrir YouTube en nueva pestaña" onclick="(function(e){ e.stopPropagation(); openInNewTab('https://t.me/+4Rb9fcFai0FlYjM5'); })(event)">
+          <img src="telegram1.jpg" alt="Telegram" loading="lazy" decoding="async">
+        </button>
       </span>
     </h1>
 
