--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
 
       // Animaciones navideñas (pantalla verde)
       { id: 'animacionnavidad1', src: 'animacionnavidad1.mp4', preset: { threshold: 0.10, diff: 0, soft: 100 }, keyColor: 'green' },
-      { id: 'animacionnavidad2', src: 'animacionnavidad2.mp4', preset: { threshold: 0.10, diff: 0, soft: 100 }, keyColor: 'green' },
+      { id: 'animacionnavidad2', src: 'animacionnavidad2.mp4', preset: { threshold: 0.06, diff: 8, soft: 60, spillSuppress: 0.7 }, keyColor: 'green' },
       { id: 'animacionnavidad3', src: 'animacionnavidad3.mp4', preset: { threshold: 0.10, diff: 0, soft: 100 }, keyColor: 'green' },
       { id: 'animacionnavidad4', src: 'animacionnavidad4.mp4', preset: { threshold: 0.10, diff: 0, soft: 100 }, keyColor: 'green' },
 
