--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
     #bg-video{position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2; opacity:0; transition:opacity .6s ease; background:#000; pointer-events:none;}
     #overlay{position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; background: url('galaxia-poster.jpg') center/cover no-repeat, linear-gradient(180deg, rgba(0,0,0,0.25), rgba(0,0,0,0.6)); opacity:1; transition:opacity .6s ease; pointer-events:none;}
 
-    header{ position:sticky; top:0; padding:1rem 2rem; display:flex; align-items:center; gap:1rem; background:rgba(0,0,0,0.7); backdrop-filter:blur(5px); z-index:40; transition:background .3s; flex-wrap:wrap; }
+    /* Header */
+    header{
+      position:sticky; top:0; padding:1rem 2rem;
+      display:flex; align-items:center; gap:1rem;
+      background:rgba(0,0,0,0.7); backdrop-filter:blur(5px);
+      z-index:10; transition:background .3s;
+      /* permitimos que otros elementos puedan envolver, pero protegeremos el título */
+      flex-wrap:wrap;
+    }
 
     /* título y logo con gradiente animado */
     header h1{
@@ -65,7 +73,7 @@
     #search { width:220px; min-width:120px; }
 
     /* layout principal */
-    .container{ max-width:1200px; margin:6rem auto 2rem; padding:0 2rem; z-index:6; position:relative; }
+    .container{max-width:1200px;margin:6rem auto 2rem;padding:0 2rem;}
     .grid{ display:grid; grid-template-columns:repeat(auto-fill,minmax(180px,1fr)); gap:1.5rem; }
     .card{ border-radius:10px; overflow:hidden; position:relative; cursor:pointer; transition:all .6s ease; opacity:0; transform:translateY(30px); }
     .card.visible{ opacity:1; transform:translateY(0); }
@@ -161,7 +169,28 @@
       .social-inline button { width:36px; height:36px; padding:0; }
       .social-inline img { width:68%; height:68%; }
     }
+    /* —————— Media query para móviles (≤780px) —————— */
+@media (max-width: 780px) {
+  header {
+    padding: 0.6rem 0.9rem;
+    gap: 0.5rem;
+    align-items: center;
+  }
+header h1 {
+  margin-right: 0.6rem; /* prueba 0.6rem, sube a 0.9rem si quieres más separación */
+}
 
+/* Asegura que el wrapper de resultados no quede pegado al borde */
+.results-wrapper {
+  margin-left: 0.35rem; /* espacio extra entre controles y el badge */
+  padding-left: 0;      /* prevenir desplazamientos no deseados */
+}
+
+/* Ajuste fino para pantallas muy pequeñas */
+@media (max-width: 420px) {
+  header h1 { margin-right: 0.45rem; }
+  .results-wrapper { margin-left: 0.18rem; }
+}
     /* extra small phones */
     @media (max-width:420px) {
       .controls { grid-template-columns: repeat(2, 1fr); gap:.35rem; }
