--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <link rel="preload" as="image" href="videoframe.jpg">
 
   <style>
+    /* ---------------------------
+       Variables globales y reset
+       --------------------------- */
+    :root {
+      --header-approx-height: 72px; /* ajusta si tu header cambia de tamaño */
+      --header-mobile-extra-gap: 0.15rem; /* reducido para móviles/tablet */
+      --container-desktop-margin-top: 8rem; /* mantener para escritorio */
+    }
+
     *{margin:0;padding:0;box-sizing:border-box;}
     html,body{height:100%;overflow-x:hidden; overflow-y:auto; font-family:sans-serif; color:#fff; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;}
 
@@ -16,14 +25,10 @@
     #bg-video{position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2; opacity:0; transition:opacity .6s ease; background:#000; pointer-events:none;}
     #overlay{position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; background: url('galaxia-poster.jpg') center/cover no-repeat, linear-gradient(180deg, rgba(0,0,0,0.25), rgba(0,0,0,0.6)); opacity:1; transition:opacity .6s ease; pointer-events:none;}
 
-    /* Header */
+    /* Header: sticky + altura mínima para consistencia */
     header{
-      position:sticky; top:0; padding:1rem 2rem;
-      display:flex; align-items:center; gap:1rem;
-      background:rgba(0,0,0,0.7); backdrop-filter:blur(5px);
-      z-index:10; transition:background .3s;
-      /* permitimos que otros elementos puedan envolver, pero protegeremos el título */
-      flex-wrap:wrap;
+      position:sticky; top:0; padding:1rem 2rem; display:flex; align-items:center; gap:1rem; background:rgba(0,0,0,0.7); backdrop-filter:blur(5px); z-index:40; transition:background .3s; flex-wrap:wrap;
+      min-height: var(--header-approx-height); /* garantiza altura esperada */
     }
 
     /* título y logo con gradiente animado */
@@ -72,9 +77,16 @@
     }
     #search { width:220px; min-width:120px; }
 
-    /* layout principal */
-    .container{max-width:1200px;margin:6rem auto 2rem;padding:0 2rem;}
-    .grid{ display:grid; grid-template-columns:repeat(auto-fill,minmax(180px,1fr)); gap:1.5rem; }
+    /* layout principal
+       - Mantengo margin por compatibilidad, pero lo subo
+       - Además añado padding-top a main para reservar espacio al header sticky
+    */
+    .container{ max-width:1200px; margin: var(--container-desktop-margin-top) auto 2rem; padding:0 2rem; z-index:6; position:relative;
+      transition: margin-top .18s ease, padding-top .18s ease; /* suaviza cambios en móvil */
+    }
+    main.container { padding-top: calc(var(--header-approx-height) + 0.4rem); } /* separación reducida */
+
+    .grid{ display:grid; grid-template-columns:repeat(auto-fill,minmax(180px,1fr)); gap:1.5rem; margin-top:0.6rem; } /* gap entre header y grid reducido */
     .card{ border-radius:10px; overflow:hidden; position:relative; cursor:pointer; transition:all .6s ease; opacity:0; transform:translateY(30px); }
     .card.visible{ opacity:1; transform:translateY(0); }
     .card img{ width:100%; display:block; transition:transform .4s,filter .4s; }
@@ -155,6 +167,13 @@
     @keyframes gradientMove { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
 
     /* compact mobile logic: 2 controls per line, small header */
+    @media (max-width:1024px) {
+      /* Aplica una reducción suave también en tablets */
+      .container { margin-top: calc(var(--header-approx-height) + 0.25rem); padding: 0 1.2rem; }
+      main.container { padding-top: calc(var(--header-approx-height) + 0.25rem); }
+      .grid { margin-top: 0.5rem; gap:1rem; }
+    }
+
     @media (max-width:780px) {
       header { padding:0.6rem 0.9rem; gap:0.5rem; align-items:center; }
       .controls {
@@ -168,29 +187,13 @@
       #search { width:100%; min-width:0; }
       .social-inline button { width:36px; height:36px; padding:0; }
       .social-inline img { width:68%; height:68%; }
+
+      /* en móviles usamos un margen superior mucho más pequeño para asegurar separación */
+      .container { padding: 0 1rem; margin-top: calc(var(--header-approx-height) + var(--header-mobile-extra-gap)); }
+      main.container { padding-top: calc(var(--header-approx-height) + var(--header-mobile-extra-gap)); }
+      .grid { grid-template-columns: repeat(3, 1fr); gap:0.9rem; margin-top:0.45rem; }
     }
-    /* —————— Media query para móviles (≤780px) —————— */
-@media (max-width: 780px) {
-  header {
-    padding: 0.6rem 0.9rem;
-    gap: 0.5rem;
-    align-items: center;
-  }
-header h1 {
-  margin-right: 0.6rem; /* prueba 0.6rem, sube a 0.9rem si quieres más separación */
-}
 
-/* Asegura que el wrapper de resultados no quede pegado al borde */
-.results-wrapper {
-  margin-left: 0.35rem; /* espacio extra entre controles y el badge */
-  padding-left: 0;      /* prevenir desplazamientos no deseados */
-}
-
-/* Ajuste fino para pantallas muy pequeñas */
-@media (max-width: 420px) {
-  header h1 { margin-right: 0.45rem; }
-  .results-wrapper { margin-left: 0.18rem; }
-}
     /* extra small phones */
     @media (max-width:420px) {
       .controls { grid-template-columns: repeat(2, 1fr); gap:.35rem; }
@@ -199,14 +202,9 @@ header h1 {
       .social-inline img { width:70%; height:70%; }
       .mobile-select-popup { max-height:160px; font-size:0.84rem; }
       .mobile-select-popup .opt { padding:.18rem .32rem; font-size:0.82rem; }
-    }
-
-    /* show 3 cards per row on mobile phones (<= 767px) */
-    @media (max-width:767px) {
-      .container { padding: 0 1rem; margin-top: 0; }
-      .grid { grid-template-columns: repeat(3, 1fr); gap:0.9rem; }
-      .card { min-height: 0; }
-      .card img { height: auto; }
+      .container { margin-top: calc(var(--header-approx-height) + 0.12rem); padding: 0 0.8rem; }
+      main.container { padding-top: calc(var(--header-approx-height) + 0.12rem); }
+      .grid { grid-template-columns: repeat(3, 1fr); gap:0.6rem; margin-top:0.35rem; }
     }
 
     .no-results { grid-column:1 / -1; padding:2.6rem; border-radius:14px; display:flex; gap:1.25rem; align-items:center; justify-content:center; flex-direction:column; background: linear-gradient(135deg, rgba(255,255,255,0.02), rgba(0,0,0,0.3)); border:1px solid rgba(255,255,255,0.04); box-shadow:0 18px 60px rgba(0,0,0,0.6); text-align:center; transition: transform .28s cubic-bezier(.2,.9,.2,1), box-shadow .2s; }
@@ -681,13 +679,18 @@ header h1 {
         const grid = document.querySelector('.grid');
         if (!container || !header || !grid) return;
         if (!isMobileScreenSmall()) {
+          // dejamos que el CSS de escritorio/tablet gestione el espacio
           container.style.marginTop = '';
+          container.style.paddingTop = '';
           return;
         }
         const headerH = Math.ceil(header.getBoundingClientRect().height);
         const smallPhone = window.matchMedia && window.matchMedia('(max-width:420px)').matches;
-        const extraGap = smallPhone ? 4 : 6;
+        // valores reducidos para evitar grandes huecos en móvil/tablet
+        const extraGap = smallPhone ? 2 : 4; // píxeles muy pequeños
+        // establecemos un margin-top dinámico: altura del header + extraGap px
         container.style.marginTop = (headerH + extraGap) + 'px';
+        container.style.paddingTop = (headerH + extraGap) + 'px';
       } catch(e){
         console.warn('adjustMobileSpacing error', e);
       }
