--- a/anime-detail.html
+++ b/anime-detail.html
@@ -676,11 +676,18 @@
               { title: "Mushoku Tensei T1 Cap 21"},
               { title: "Mushoku Tensei T1 Cap 22"},
               { title: "Mushoku Tensei T1 Cap 23"},
-              { title: "Mushoku Tensei T1 OVA 1 Eris, La Cazaduendes"},
             ]
           },
           {
             num: 2,
+	    name: "Ova 1",
+            cover: "mushokuova.jpg",
+            eps: [
+              { title: "Mushoku Tensei. Ova 1: Eris, La Cazaduendes"},
+            ]
+          },
+          {
+            num: 3,
             cover: "mushoku22.jpg",
             eps: [
               { title: "Mushoku Tensei T1 Cap 0"},
@@ -1371,7 +1378,7 @@
 	    name: "Película 1",
             cover: "https://www.dropbox.com/scl/fi/qwllg4jlrbdnamf5h8spf/chait2.jpg?rlkey=cj3r0ny8n5yhk4b2fcbz68jh7&st=m9dobxos&raw=1",
             eps: [
-              { title: "Chainsaw Man Movie: Reze-hen 【SUB ESPAÑOL】【HD】"},
+              { title: "Chainsaw Man Movie: Reze-hen 【ESPAÑOL】【HD】"},
             ]
           }
         ]
