--- a/video-player.html
+++ b/video-player.html
@@ -1621,7 +1621,7 @@
           "14": { link:'https://www.dropbox.com/scl/fi/ovzrqwtzo63nh3xbs5heg/Gachiakuta-T1-Cap-14.mp4?rlkey=grbhc4ca22kkyoiiyv4mgzgsm&st=zb0fjqno&raw=1', link2: 'https://drive.google.com/file/d/1mi1DOfh5WY4AODHWnTOODj6dHZz8PFrw/preview', title:'Gachiakuta T1 Cap 14' },
           "15": { link:'https://www.dropbox.com/scl/fi/uqtiasi9049suz67w91mw/Gachiakuta-T1-Cap-15.mp4?rlkey=rt4cz9w4uzbkbm4sbomqg729f&st=j78mmd0n&raw=1', link2: 'https://drive.google.com/file/d/145mtOjsmppJbYSxGaekgzmd_tdFRdHAl/preview', title:'Gachiakuta T1 Cap 15' },
           "16": { link:'https://www.dropbox.com/scl/fi/gskk37ewm8iqq4nqqklqa/Gachiakuta-T1-Cap-16.mp4?rlkey=r9uagn7mrg2j89odijzpf60w7&st=rqz3kerl&raw=1', link2: 'https://drive.google.com/file/d/1qFWtIiOMn_fFyRPXx_n5wb9XZs3zOdxP/preview', title:'Gachiakuta T1 Cap 16' },
-          "17": { link:'&raw=1', title:'Gachiakuta T1 Cap 17' },
+          "17": { link:'https://drive.google.com/file/d/1CP6xbNBo6vwjnym6RdCGm-0DoNWTEbpW/preview', title:'Gachiakuta T1 Cap 17' },
           "18": { link:'&raw=1', title:'Gachiakuta T1 Cap 18' },
           "19": { link:'&raw=1', title:'Gachiakuta T1 Cap 19' },
           "20": { link:'&raw=1', title:'Gachiakuta T1 Cap 20' },
@@ -2286,8 +2286,10 @@
           "12": { link:'https://www.dropbox.com/scl/fi/z54henh412bn6nw2atj3m/Futari-Solo-Camp-T1-Cap-12.mp4?rlkey=kfnsmz4vhr4rgt870bbi6070e&st=y47yxois&raw=1', link2: 'https://drive.google.com/file/d/1tVSnilDvVGfT3RPU-HeTCNLxmupOx63G/preview', title:'Futari Solo Camp T1 Cap 12' },
           "13": { link:'https://www.dropbox.com/scl/fi/zazzntx8laj0wix5ztvtr/Futari-Solo-Camp-T1-Cap-13.mp4?rlkey=e72vtnqo0gltr286y0pxz3sri&st=1fut28fn&raw=1', link2: 'https://drive.google.com/file/d/1pNIXibimqESPruJSjt8AXm58OBkHMRkt/preview', title:'Futari Solo Camp T1 Cap 13' },
           "14": { link:'https://www.dropbox.com/scl/fi/70jgkdfis4gdizt3z4co3/Futari-Solo-Camp-T1-Cap-14.mp4?rlkey=keort7bnffp41hbsiu88km2a0&st=bf8kahu8&raw=1', link2: 'https://drive.google.com/file/d/1f1qcrSFvfgioQy7BudvyBq6ne0d0_LuS/preview', title:'Futari Solo Camp T1 Cap 14' },
-          "15": { link:'https://www.dropbox.com/scl/fi/sa262ffs951iq3ppbd2n7/Futari-Solo-Camp-T1-Cap-15.mp4?rlkey=k2bendwobd3ckof3fhcgvj6vo&st=c78gwqa4&raw=1', link2: 'https://drive.google.com/file/d/1g4WCqEzM2wiZYX7tjC-za-I9yBjOlA5v/preview', title:'Futari Solo Camp T1 Cap 13' },
-          "16": { link:'https://www.dropbox.com/scl/fi/m7o5uida81hxj9hdoteo9/Futari-Solo-Camp-T1-Cap-16.mp4?rlkey=ch0kjyhkagbu1xulleofxhdsw&st=9sf2eblj&raw=1', link2: 'https://drive.google.com/file/d/1FBNlU1HMLRCERe4G1SP5pyjEk3NqBpoy/preview', title:'Futari Solo Camp T1 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/sa262ffs951iq3ppbd2n7/Futari-Solo-Camp-T1-Cap-15.mp4?rlkey=k2bendwobd3ckof3fhcgvj6vo&st=c78gwqa4&raw=1', link2: 'https://drive.google.com/file/d/1g4WCqEzM2wiZYX7tjC-za-I9yBjOlA5v/preview', title:'Futari Solo Camp T1 Cap 15' },
+          "16": { link:'https://www.dropbox.com/scl/fi/m7o5uida81hxj9hdoteo9/Futari-Solo-Camp-T1-Cap-16.mp4?rlkey=ch0kjyhkagbu1xulleofxhdsw&st=9sf2eblj&raw=1', link2: 'https://drive.google.com/file/d/1FBNlU1HMLRCERe4G1SP5pyjEk3NqBpoy/preview', title:'Futari Solo Camp T1 Cap 16' },
+          "17": { link:'https://drive.google.com/file/d/15J93sUxSY360H4hpANx7YG27VRSvv-mn/preview', title:'Futari Solo Camp T1 Cap 17' },
+          "18": { link:'https://drive.google.com/file/d/1ga1442E8p8D_lvleGPyHsI3F1XLM0hJp/preview', title:'Futari Solo Camp T1 Cap 18' },
         }
       },
       "54": {
@@ -2305,6 +2307,7 @@
           "2": { link:'https://drive.google.com/file/d/1tEil2U0reV7OyVKraELJy0TY3QjEm_6_/preview', link2: 'https://www.dropbox.com/scl/fi/k9bbmwg8sfypxyadooayu/Alma-chan-wa-Kazoku-ni-Naritai-T1-Cap-2.mp4?rlkey=nrcqdk40vbrz9lq79pzc5hh5c&st=ne2zz2el&raw=1', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 2' },
           "3": { link:'https://drive.google.com/file/d/1XO_b-XfmYFmbhBWyewV8cWhagGROZvGj/preview', link2: 'https://www.dropbox.com/scl/fi/uqh3bni3aocfj12clor7r/Alma-chan-wa-Kazoku-ni-Naritai-T1-Cap-3.mp4?rlkey=rtytkar8d973rd7mquz3z1tr3&st=eh0z7dsi&raw=1', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 3' },
           "4": { link:'https://drive.google.com/file/d/1tycCUt59hcHopKPxqkPaZi6CJASstaZn/preview', link2: 'https://www.dropbox.com/scl/fi/1vetm4oi2yfkum6qy76bf/Alma-chan-wa-Kazoku-ni-Naritai-T1-Cap-4.mp4?rlkey=t4yxb3f6tnhslvyd1y0cwiphg&st=285328hq&raw=1', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1h2Pk9Z-ZLzo_ULtRnbvzlamjrBfaA8-7/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 5' },
         }
       },
 
