--- a/video-player.html
+++ b/video-player.html
@@ -1317,10 +1317,10 @@
       },
       "26": {
         "1": {
-          "1": { link:'https://www.dropbox.com/scl/fi/q5np47bjvtu4obyocyvk0/Zootopia-1.mp4?rlkey=lv3ftdnjyshtuln1d4b4u4328&st=qjnn3oa5&raw=1', title:'Zootopia 1' },
+          "1": { link:'https://drive.google.com/file/d/1IID3y0_7ZeHWgMSZXqXhs4exRWCZSGsR/preview', link2:'https://www.dropbox.com/scl/fi/q5np47bjvtu4obyocyvk0/Zootopia-1.mp4?rlkey=lv3ftdnjyshtuln1d4b4u4328&st=qjnn3oa5&raw=1', title:'Zootopia 1' },
         },
         "2": {
-          "1": { link:'&raw=1', title:'Zootopia 2' },
+          "1": { link:'https://drive.google.com/file/d/19LsauRPPIzp1V9dR5FriSXPoX_lcexgQ/preview', link2:'https://drive.google.com/file/d/1-xElJz9WhfOm8Eh1QiofybaMUspwsRF_/preview', title:'Zootopia 2' },
         }
       },
       "27": {
