--- a/anime-detail.html
+++ b/anime-detail.html
@@ -1703,7 +1703,7 @@
 	    name: "Zootopia 2",
             cover: "https://www.dropbox.com/scl/fi/8jsapi6ovjb24j9hwydhq/zootopia2.jpeg?rlkey=dee636x8blmjjuh6xltn7x2i5&st=x9bcl3m3&raw=1",
             eps: [
-              { title: "Zootopia 2 (Próximamente"},
+              { title: "Zootopia 2"},
             ]
           }
         ]
